@@ -38,7 +38,9 @@ Overview
 
     * Fixed reading of TypeObject and PropertyList parameters
     
-    * Fixed DestinationOrder 
+    * Fixed DestinationOrder
+    
+    * Config: udds.entity-listener-history 
 
  1.3.1
  
