@@ -53,6 +53,7 @@ jrtps.discovery.announce-uris = mem://10.10.10.11:1024
 # whether or not udds DataWriter writes collections coherently or not
 udds.collections.coherent = true
 udds.sedp-delay = 500
+udds.entity-listener-history = true
 
 # ------  uDDS security configuration ------------
 # Authentication plugin name: jks, none
